--- a/FFChallenge/Base.lproj/Main.storyboard
+++ b/FFChallenge/Base.lproj/Main.storyboard
@@ -1,14 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="La5-Ix-1jc">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Landing View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LandingViewController" customModule="FFChallenge" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +19,108 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" placeholder="search for establishment" translatesAutoresizingMaskIntoConstraints="NO" id="Gdq-TZ-ryg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LWM-fB-Ej9">
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rhA-gg-9jI">
+                                    <size key="itemSize" width="165" height="165"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="BJT-Fe-Rt7" customClass="EstablishmentCollectionViewCell" customModule="FFChallenge" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="165" height="165"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gvL-s8-EAT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="134"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6hS-C3-MH4">
+                                                    <rect key="frame" x="0.0" y="134" width="165" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="W3w-8D-fJK"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gj8-In-cSf">
+                                                    <rect key="frame" x="0.0" y="135" width="165" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="qNQ-G2-eTf"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="6hS-C3-MH4" firstAttribute="top" secondItem="gvL-s8-EAT" secondAttribute="bottom" id="1YM-5k-LLp"/>
+                                            <constraint firstItem="Gj8-In-cSf" firstAttribute="leading" secondItem="BJT-Fe-Rt7" secondAttribute="leading" id="Hlj-uQ-EVf"/>
+                                            <constraint firstAttribute="trailing" secondItem="6hS-C3-MH4" secondAttribute="trailing" id="MXO-qn-GUC"/>
+                                            <constraint firstItem="gvL-s8-EAT" firstAttribute="leading" secondItem="BJT-Fe-Rt7" secondAttribute="leading" id="WvT-mc-3n6"/>
+                                            <constraint firstItem="6hS-C3-MH4" firstAttribute="leading" secondItem="BJT-Fe-Rt7" secondAttribute="leading" id="bgd-qd-2iE"/>
+                                            <constraint firstAttribute="trailing" secondItem="gvL-s8-EAT" secondAttribute="trailing" id="qS4-en-Sla"/>
+                                            <constraint firstAttribute="trailing" secondItem="Gj8-In-cSf" secondAttribute="trailing" id="rDc-9Z-IgM"/>
+                                            <constraint firstItem="gvL-s8-EAT" firstAttribute="top" secondItem="BJT-Fe-Rt7" secondAttribute="top" id="yUZ-6w-HZZ"/>
+                                            <constraint firstItem="Gj8-In-cSf" firstAttribute="top" secondItem="6hS-C3-MH4" secondAttribute="bottom" id="zf1-db-md5"/>
+                                            <constraint firstAttribute="bottom" secondItem="Gj8-In-cSf" secondAttribute="bottom" id="zuX-MG-RyO"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="dividerView" destination="6hS-C3-MH4" id="EHk-n3-ejz"/>
+                                            <outlet property="imgView" destination="gvL-s8-EAT" id="eP1-xh-5AX"/>
+                                            <outlet property="nameLabel" destination="Gj8-In-cSf" id="pRX-33-wtM"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="LWM-fB-Ej9" secondAttribute="trailing" id="4ks-KD-00v"/>
+                            <constraint firstItem="Gdq-TZ-ryg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="70D-C5-IPl"/>
+                            <constraint firstItem="Gdq-TZ-ryg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="OVC-f0-4I8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LWM-fB-Ej9" secondAttribute="bottom" id="QY2-Lh-97Z"/>
+                            <constraint firstItem="LWM-fB-Ej9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="R56-KW-OoH"/>
+                            <constraint firstAttribute="trailing" secondItem="Gdq-TZ-ryg" secondAttribute="trailing" id="fuf-HL-BPu"/>
+                            <constraint firstItem="LWM-fB-Ej9" firstAttribute="top" secondItem="Gdq-TZ-ryg" secondAttribute="bottom" id="jjn-lc-trQ"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7kp-xo-0GD"/>
+                    <connections>
+                        <outlet property="collectionView" destination="LWM-fB-Ej9" id="XKk-G0-wjn"/>
+                        <outlet property="searchBar" destination="Gdq-TZ-ryg" id="hr8-GN-hFB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yUN-Gz-EO8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="La5-Ix-1jc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vm9-N9-3FW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Vfl-Xb-0gt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LnE-Rv-eje" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="-646"/>
         </scene>
     </scenes>
 </document>
