--- a/FFChallenge/Base.lproj/Main.storyboard
+++ b/FFChallenge/Base.lproj/Main.storyboard
@@ -7,6 +7,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GillSans.ttc">
+            <string>GillSans</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Landing View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -25,7 +30,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LWM-fB-Ej9">
-                                <rect key="frame" x="0.0" y="128" width="375" height="539"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rhA-gg-9jI">
                                     <size key="itemSize" width="165" height="165"/>
@@ -42,22 +47,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gvL-s8-EAT">
-                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="134"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="165" height="114"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="cellDesign" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6hS-C3-MH4">
-                                                    <rect key="frame" x="0.0" y="134" width="165" height="1"/>
+                                                    <rect key="frame" x="0.0" y="114" width="165" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="W3w-8D-fJK"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gj8-In-cSf">
-                                                    <rect key="frame" x="0.0" y="135" width="165" height="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Gj8-In-cSf">
+                                                    <rect key="frame" x="0.0" y="115" width="165" height="50"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="qNQ-G2-eTf"/>
+                                                        <constraint firstAttribute="height" constant="50" id="qNQ-G2-eTf"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -74,6 +82,9 @@
                                             <constraint firstItem="Gj8-In-cSf" firstAttribute="top" secondItem="6hS-C3-MH4" secondAttribute="bottom" id="zf1-db-md5"/>
                                             <constraint firstAttribute="bottom" secondItem="Gj8-In-cSf" secondAttribute="bottom" id="zuX-MG-RyO"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="cellDesign" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                         <connections>
                                             <outlet property="dividerView" destination="6hS-C3-MH4" id="EHk-n3-ejz"/>
                                             <outlet property="imgView" destination="gvL-s8-EAT" id="eP1-xh-5AX"/>
@@ -91,7 +102,7 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LWM-fB-Ej9" secondAttribute="bottom" id="QY2-Lh-97Z"/>
                             <constraint firstItem="LWM-fB-Ej9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="R56-KW-OoH"/>
                             <constraint firstAttribute="trailing" secondItem="Gdq-TZ-ryg" secondAttribute="trailing" id="fuf-HL-BPu"/>
-                            <constraint firstItem="LWM-fB-Ej9" firstAttribute="top" secondItem="Gdq-TZ-ryg" secondAttribute="bottom" constant="20" id="jjn-lc-trQ"/>
+                            <constraint firstItem="LWM-fB-Ej9" firstAttribute="top" secondItem="Gdq-TZ-ryg" secondAttribute="bottom" id="jjn-lc-trQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7kp-xo-0GD"/>
